@@ -325,16 +325,13 @@ class tx_kickstarter_wizard extends tx_kickstarter_compilefiles {
 	function view_result()	{
 		$this->makeFilesArray($this->saveKey);
 
-			// Empty the array of files to be overwritten
-		$this->wizArray['save']['overwrite_files'] = array();
-
 		$keyA = array_keys($this->fileArray);
 		asort($keyA);
 
 		$filesOverview1 = array();
 		$filesOverview2 = array();
 		$filesContent   = array();
-
+		
 		$filesOverview1[]= '<tr'.$this->bgCol(1).'>
 			<td><strong>' . $this->fw('Filename:') . '</strong></td>
 			<td><strong>' . $this->fw('Size:') . '</strong></td>
@@ -374,8 +371,11 @@ class tx_kickstarter_wizard extends tx_kickstarter_compilefiles {
 			|| $fileName == 'doc/wizard_form.html') {
 				$line .= '<input type="hidden" name="' . $this->piFieldName('wizArray_upd') . '[save][overwrite_files][]" value="' . $fileName . '" />';
 			} else {
-				$line .= '<input type="checkbox" name="' . $this->piFieldName('wizArray_upd') . '[save][overwrite_files][]" value="' . $fileName . '" checked="checked" />';
-			
+				$checked = '';
+				if (in_array($fileName, $this->wizArray['save']['overwrite_files'])) {
+					$checked = ' checked="checked"';
+				}	
+				$line .= '<input type="checkbox" name="' . $this->piFieldName('wizArray_upd') . '[save][overwrite_files][]" value="' . $fileName . '"'.$checked.' />';
 			}
 
 			$line .= '</td>
@@ -400,7 +400,7 @@ class tx_kickstarter_wizard extends tx_kickstarter_compilefiles {
 				<strong>'.$this->fw('Write to location:').'</strong><br />
 				<select name="'.$this->piFieldName('loc').'">'.
 					($this->pObj->importAsType('G')?'<option value="G">Global: '.$this->pObj->typePaths['G'].$this->saveKey.'/'.(@is_dir(PATH_site.$this->pObj->typePaths['G'].$this->saveKey)?' (OVERWRITE)':' (empty)').'</option>':'').
-					($this->pObj->importAsType('L')?'<option value="L">Local: '.$this->pObj->typePaths['L'].$this->saveKey.'/'.(@is_dir(PATH_site.$this->pObj->typePaths['L'].$this->saveKey)?' (OVERWRITE)':' (empty)').'</option>':'').
+					($this->pObj->importAsType('L')?'<option value="L" selected="selected">Local: '.$this->pObj->typePaths['L'].$this->saveKey.'/'.(@is_dir(PATH_site.$this->pObj->typePaths['L'].$this->saveKey)?' (OVERWRITE)':' (empty)').'</option>':'').
 				'</select>
 				<input type="submit" name="'.$this->piFieldName('WRITE').'" value="WRITE" onclick="return confirm(\'If the setting in the selectorbox says OVERWRITE\nthen the marked files of the current extension in that location will be OVERRIDDEN! \nPlease decide if you want to continue.\n\n(Remember, this is a *kickstarter* - NOT AN editor!)\');" />
 			';
