@@ -1,3 +1,7 @@
+2006-08-12 Ingo Renner <typo3@ingo-renner.com>
+	* CHG moved the languages section to be right below the general information section
+	* ADD made the local extension directory the default for the write location
+
 2006-07-21 Ingo Renner <typo3@ingo-renner.com>
 	* FIX fixed bug #156: Not all BE languages available in languages setup, thanks to Karsten for the useful hint!
 
